# clinician-assistant-lg

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  chat.ipynb  chat.py  chatKenyaEMR.py  config.env.example  create_textrag.ipynb  main.py  push_to_ecr.sh  pyproject.toml  ragas_eval_all_combinations.csv  ragas_eval_full_combinations.csv  requirements.txt  sql_agent.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
arv_metadata/: docstore.json  index_store.json
chatlib/: assistant_node.py  guidlines_rag_agent_li.py  helpers.py  idsr_check.py  idsr_definition.py  logger.py  ner_redact.py  patient_all_data.py  patient_sql_agent.py  phi_filter.py  state_types.py
notebooks/: chapter_summaries.csv  create_location_db.ipynb  create_patient_db.ipynb  create_slim_patient_db.ipynb  create_textrag.ipynb  gen_idsr_rag.ipynb  rag_time_benchmarking.ipynb  timing_benchmark_with_rerank.csv  timing_benchmark_with_rerank_gpt35.csv  timing_benchmark_with_rerank_gpt35_cosinererank.csv  timing_benchmark_with_rerank_gpt35_hybridrerank.csv
scripts/: build_location_db.py  evaluate_trulens.py  parse_guidelines.py  patient_sql_agent.py  prep_summaries.py  process_idsr.py  ragas_eval.py
