[project]
name = "clinicalassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dateparser>=1.2.2",
    "faiss-cpu>=1.11.0",
    "gradio>=5.36.2",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "llama-index>=0.12.48",
    "pandas>=2.3.1",
    "pylint>=3.3.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
]
